alignment corrected
Some changes in alignment and menu page correction

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,6 @@
   padding: 0rem;
 }
 
-*body {
+body {
   margin: 0%;
 }
