--- a/src/Component/Home/Category.css
+++ b/src/Component/Home/Category.css
@@ -15,12 +15,11 @@
 .categorySec {
     display: grid;
     grid-template-columns: auto auto auto auto;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    gap: 3rem;
+    gap: 2.5rem;
     margin-top: -10rem;
-
+    overflow: hidden;
+    align-content: center;
+    margin-left: 1.5rem;
 }
 
 .category {
@@ -47,31 +46,34 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Train+One&display=swap');
+
 @media only screen and (max-device-width: 480px) {
-.categorySec{
-  display: block;
+    .categorySec {
+        display: block;
 
-  grid-template-columns: auto auto auto auto;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  gap: 3rem;
-  margin-top: -10rem;
-}
-.category{
-margin-left: 12rem;
-margin-bottom: 30rem;
-}
-.cat{
-  position: absolute;
-  border-radius: 2rem;
-width: 40rem;
+        grid-template-columns: auto auto auto auto;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        gap: 3rem;
+        margin-top: -10rem;
+    }
+
+    .category {
+        margin-left: 12rem;
+        margin-bottom: 30rem;
+    }
+
+    .cat {
+        position: absolute;
+        border-radius: 2rem;
+        width: 40rem;
 
 
-  -webkit-border-radius: 2rem;
-  -moz-border-radius: 2rem;
-  -ms-border-radius: 2rem;
-  -o-border-radius: 2rem;
-  z-index: 7;
-}
+        -webkit-border-radius: 2rem;
+        -moz-border-radius: 2rem;
+        -ms-border-radius: 2rem;
+        -o-border-radius: 2rem;
+        z-index: 7;
+    }
 }
